--- a/index.html
+++ b/index.html
@@ -40,14 +40,19 @@
 <body>
 <div class="container partialscroll">
 
-    <div class="section"></div>
-    <div class="section"></div>
-    <div class="section"></div>
-    <div class="section"></div>
+    <div class="section">1</div>
+    <div class="section">2</div>
+    <div class="section">3</div>
+    <div class="section">4</div>
 
 </div>
 
-<div class="move_btn"></div>
+<ul class="btn">
+    <li class="move_to">MOVE TO 3</li>
+    <li class="move_up">UP</li>
+    <li class="move_down">DOWN</li>
+</ul>
+
 
 </body>
 </html>
