UPDATE jquery.partialScroll.js - Add method 'stopScroll'   - Disable scrolling. - Add method 'startScroll'   - Enable scrolling.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <li class="move_to">MOVE TO 3</li>
     <li class="move_up">UP</li>
     <li class="move_down">DOWN</li>
+    <li class="stop">STOP SCROLL</li>
+    <li class="start">START SCROLL</li>
 </ul>
 
 
