--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="ko">
 <head>
 
-    <title></title>
+    <title>SCROLLING</title>
 
     <meta charset="UTF-8"/>
     <meta name="description" content=""/>
@@ -10,35 +10,16 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1"/>
 
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content=""/>
-    <meta property="og:description" content=""/>
-    <meta property="og:image" content=""/>
-    <meta property="og:url" content=""/>
-
-    <link rel="icon" href="favicon.png"/>
-    <link rel="apple-touch-icon-precomposed" href="favicon.png"/>
-    <!--<link rel="shortcut icon" href="favicon.ico" />-->
-
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/main.css"/>
 
-    <!--[if lt ie 9]>
-    <script src="js/lib/ie9.js"></script>
-    <script src="js/lib/respond.min.js"></script>
-    <![endif]-->
-    <script src="js/lib/modernizr-2.8.3.min.js"></script>
-    <script src="js/lib/jquery-1.10.1.min.js"></script>
-
-    <script src="js/plugins/jquery.easing.min.js"></script>
-    <script src="js/plugins/prefixfree.min.js"></script>
-
-    <script src="js/plugins/jquery.partialScroll.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="dist/jquery.partialScroll.js"></script>
     <script src="js/main.js"></script>
 
 </head>
 <body>
-<div class="container partialscroll">
+<div class="container">
 
     <div class="section">1</div>
     <div class="section">2</div>
