--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
     <div class="section">2</div>
     <div class="section">3</div>
     <div class="section">4</div>
+    <div class="section footer"></div>
 
 </div>
 
 <ul class="btn">
-    <li class="move_to">MOVE TO 3</li>
+    <li class="move_to clearfix">
+        <input type="text">
+        <button>MOVE</button>
+    </li>
     <li class="move_up">UP</li>
     <li class="move_down">DOWN</li>
     <li class="stop">STOP SCROLL</li>
