UPDATE dist/jquery.partialSCroll.js - Changed to allow scrolling of a footer section of different size from regular sections.
UPDATE index.html
PDATE js/main.js
- Changed from `stop` to `pause`.
- Changed from `start` to `play`.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </li>
     <li class="move_up">UP</li>
     <li class="move_down">DOWN</li>
-    <li class="stop">STOP SCROLL</li>
-    <li class="start">START SCROLL</li>
+    <li class="pause">PAUSE SCROLL</li>
+    <li class="play">PLAY SCROLL</li>
 </ul>
 
 
