- Added the public method 'silentMoveTo'.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
 </div>
 
 <ul class="btn">
-    <li class="move_to clearfix">
-        <input type="text">
+    <li class="move_to normal_move_to clearfix">
+        <input type="number" value="0" max="4">
         <button>MOVE</button>
+    </li>
+    <li class="move_to silent_move_to clearfix">
+        <input type="number" value="0" max="4">
+        <button>SILENT MOVE</button>
     </li>
     <li class="move_up">UP</li>
     <li class="move_down">DOWN</li>
