- Added the public method 'stopWheel' + 'startWheel'.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     </li>
     <li class="move_up">UP</li>
     <li class="move_down">DOWN</li>
-    <li class="pause">PAUSE SCROLL</li>
-    <li class="play">PLAY SCROLL</li>
+    <li class="pause">PAUSE WHEEL</li>
+    <li class="play" style="background: red;">PLAY WHEEL</li>
+    <li class="stop">ALL STOP</li>
+    <li class="start" style="background: red;">ALL START</li>
 </ul>
 
 
