Added 'horizontal' mode in option.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 <body>
 <div class="container">
 
-    <div class="section">1</div>
-    <div class="section">2</div>
-    <div class="section">3</div>
-    <div class="section">4</div>
-    <div class="section footer"></div>
+    <div class="section_wrap">
+        <div class="section">1</div>
+        <div class="section">2</div>
+        <div class="section">3</div>
+        <div class="section">4</div>
+        <div class="section footer"></div>
+    </div>
 
 </div>
 
